--- a/_posts/2016-02-03-day-15.md
+++ b/_posts/2016-02-03-day-15.md
@@ -6,3 +6,5 @@ title:  Day 15
 - This is official; or rather suppressive. The Police Cyber Investigation Response Centre (PCIRC) are now on Twitter under the handle @OfficialPcirc &mdash; they have started issuing several warnings and notifying users via 'tweet' that they or their contents are 'under investigation'. Malaysia's news portal MalaysiaKini covered this <a href="https://www.malaysiakini.com/news/329176" target="_blank">Meet Malaysia’s new Twitter police - @OfficialPcirc</a>
 
 - The non-profit NGO, IFEX (formerly the International Freedom of Expression Exchange), based in Canada, mirrored the article originally posted on Electronic Frontier Foundation onto their site (ifex.org): <a href="https://www.ifex.org/malaysia/2016/02/03/medium_sitewide_encryption/" target="_blank">Medium's sitewide encryption confronts censorship in Malaysia</a> 
+
+- The global anti-censorship network of bloggers and activists, 'The Global Voices Advocacy' featured the block of Medium.com in Malaysia on their <a href="https://advox.globalvoices.org/2016/02/03/netizen-report-from-egypt-to-kenya-to-venezuela-online-political-speech-feels-riskier-than-ever/" target="_blank">Netizen Report: From Egypt to Kenya to Venezuela, Online Political Speech Feels Riskier Than Ever</a> article
