--- a/_posts/2016-02-03-day-15.md
+++ b/_posts/2016-02-03-day-15.md
@@ -8,3 +8,7 @@ title:  Day 15
 - The non-profit NGO, IFEX (formerly the International Freedom of Expression Exchange), based in Canada, mirrored the article originally posted on Electronic Frontier Foundation onto their site (ifex.org): <a href="https://www.ifex.org/malaysia/2016/02/03/medium_sitewide_encryption/" target="_blank">Medium's sitewide encryption confronts censorship in Malaysia</a> 
 
 - The global anti-censorship network of bloggers and activists, 'The Global Voices Advocacy' featured the block of Medium.com in Malaysia on their <a href="https://advox.globalvoices.org/2016/02/03/netizen-report-from-egypt-to-kenya-to-venezuela-online-political-speech-feels-riskier-than-ever/" target="_blank">Netizen Report: From Egypt to Kenya to Venezuela, Online Political Speech Feels Riskier Than Ever</a> article
+
+<center>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr"><a href="https://twitter.com/hashtag/NetizenReport?src=hash">#NetizenReport</a>: In Egypt, Kenya &amp; Venezuela, Online Political Speech Feels Riskier Than Ever <a href="https://t.co/NBGgd4KO1E">https://t.co/NBGgd4KO1E</a> <a href="https://t.co/Otz1ynsouB">pic.twitter.com/Otz1ynsouB</a></p>&mdash; Global Voices (@globalvoices) <a href="https://twitter.com/globalvoices/status/695640982117863424">February 5, 2016</a></blockquote>
+</center>
