--- a/_posts/2016-02-06-day-18.md
+++ b/_posts/2016-02-06-day-18.md
@@ -6,5 +6,5 @@ title:  Day 18
 - Original article mirrored on MediaShift.org By Global Voices Advocacy Netizen Report Team <a href="http://mediashift.org/2016/02/netizen-report-from-egypt-to-kenya-to-venezuela-online-political-speech-feels-riskier-than-ever/" target="_blank">Netizen Report: From Egypt to Kenya to Venezuela, Online Political Speech Feels Riskier than Ever</a>
 
 <center>
-<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Malaysia block&#39;s <a href="https://twitter.com/Medium">@Medium</a> over corruption charges, EU-US Safe Harbor negotiations hit choppy waters + more <a href="https://t.co/XRxxaaKWxD">https://t.co/XRxxaaKWxD</a></p>&mdash; Mark Glaser (@mediatwit) <a href="https://twitter.com/mediatwit/status/695870840894844928">February 6, 2016</a></blockquote>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Malaysia block&#39;s <a href="https://twitter.com/Medium">@Medium</a> over corruption charges, EU-US Safe Harbor negotiations hit choppy waters + more <a href="https://t.co/tXU5v8rHD3">https://t.co/tXU5v8rHD3</a></p>&mdash; MediaShift (@MediaShiftOrg) <a href="https://twitter.com/MediaShiftOrg/status/695867100846551041">February 6, 2016</a></blockquote>
 </center>
