--- a/_posts/2016-02-11-day-23.md
+++ b/_posts/2016-02-11-day-23.md
@@ -14,3 +14,5 @@ title:  Day 22
 - Owais Aslam Ali &mdash; the Secretary General of The Pakistan Press Foundation (PPF) wrote an Open Letter to the Malaysian Prime Minister Najib Razak defending Freedom of Expression calling for the blog-publishing platform Medium.com to be unblocked in Malaysia
 
 > PPF urges your government to take remedial measures in order to protect press freedom, reader privacy and check censorship in Malaysia. &mdash; Owais Aslam Ali (PPF)
+
+<img src="/img/ppf-open-letter.jpg" class="img-responsive img-border" data-action="zoom">
