--- a/_posts/2016-02-11-day-23.md
+++ b/_posts/2016-02-11-day-23.md
@@ -15,4 +15,6 @@ title:  Day 22
 
 > PPF urges your government to take remedial measures in order to protect press freedom, reader privacy and check censorship in Malaysia. &mdash; Owais Aslam Ali (PPF)
 
+- For those who are unable to view SarawakReport.org or change to third-party DNS provider, no hassle. We took a screenshot of that very article posted on SarawakReport.org and present it here  (mirrored) in JPEG format:
+
 <img src="/img/ppf-open-letter.jpg" class="img-responsive img-border" data-action="zoom">
