--- a/_posts/2016-02-11-day-23.md
+++ b/_posts/2016-02-11-day-23.md
@@ -11,7 +11,7 @@ title:  Day 22
 
 - Featured on Sarawak Report <a href="http://www.sarawakreport.org/campaign/open-letter-from-pakistan-press-foundation-ppf-over-the-blocking-of-blogging-platform-medium-in-malaysia/" target="_blank">Open Letter From Pakistan Press Foundation (PPF) Over the Blocking of Blogging Platform Medium in Malaysia.</a>
 
-- Owais Aslam Ali &mdash; the Secretary General of The Pakistan Press Foundation (PPF) wrote an Open Letter to the Malaysian Prime Minister Najib Razak defending Freedom of Expression calling for the blog-publishing platform Medium.com to be unblocked in Malaysia
+- Owais Aslam Ali &mdash; the Secretary General of The <a href="http://www.pakistanpressfoundation.org/" target="_blank">Pakistan Press Foundation (PPF)</a> wrote an Open Letter to the Malaysian Prime Minister Najib Razak defending Freedom of Expression calling for the blog-publishing platform Medium.com to be unblocked in Malaysia
 
 	> PPF urges your government to take remedial measures in order to protect press freedom, reader privacy and check censorship in Malaysia. &mdash; Owais Aslam Ali (PPF)
 
