--- a/_posts/2016-02-08-day-20.md
+++ b/_posts/2016-02-08-day-20.md
@@ -3,4 +3,8 @@ layout: post
 title:  Day 20
 ---
 	
-- Nothing to report as of yet.
+- Fathin Ungku @fat___thin went back to her hometown, only to find out that Medium.com had been blocked in Malaysia &mdash; she tweeted with a tone of disappointment:
+
+<center>
+<blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">in my hometown in malaysia where they&#39;ve blocked <a href="https://twitter.com/Medium">@Medium</a> ?????? WHY WOULD U DO THAT</p>&mdash; Fathin Ungku (@fat___thin) <a href="https://twitter.com/fat___thin/status/696898248020090880">February 9, 2016</a></blockquote>
+</center>
