--- a/_posts/2016-02-21-day-33.md
+++ b/_posts/2016-02-21-day-33.md
@@ -3,4 +3,4 @@ layout: post
 title:  Day 33
 ---
 	
-- Nothing to report as of yet.
+- An Online Petition was created <a href="https://www.change.org/p/malaysian-communications-and-multimedia-commission-unblock-medium-com-in-malaysia" target="_blank">Unblock Medium.com in Malaysia</a> via Change.org &mdash; The petition calls for Malaysian Communications and Multimedia Commission (MCMC) to unblock Medium.com with a letter to the Head of Department, Consumer Protection and Complaints Bureau, Mr. Ratnawaty Talib
