--- a/_posts/2016-02-23-day-35.md
+++ b/_posts/2016-02-23-day-35.md
@@ -4,3 +4,4 @@ title:  Day 35
 ---
 	
 - The Online Petition via Change.org currently shows 230 supporters who have signed the petition, asking MCMC to unblock Medium.com in Malaysia
+- 270 more petitions to reach the 500 mark
