--- a/_posts/2016-02-24-day-37.md
+++ b/_posts/2016-02-24-day-37.md
@@ -11,14 +11,9 @@ title:  Day 37
 	
 	> "This is an unpleasant surprise. MCMC has replied to my query and said they will issue a statement," &mdash; Editor &amp; Chief Executive, Jahabar Sadiq
 	
-- Updated list of news sites &amp; blogs that are blocked in Malaysia, besides Medium.com:-
+- Updated list of online news sites that are blocked in Malaysia, besides Medium.com:-
 	
 	- www.themalaysianinsider.com
 	- www.malaysia-chronicle.com
 	- www.asiasentinel.com
 	- www.sarawakreport.org
-
-	- syedsoutsidethebox.blogspot.my
-	- tabunginsider.blogspot.my
-	- jinggo-fotopages.blogspot.my
-	- dinturtle.blogspot.my
