--- a/_posts/2016-02-25-day-37.md
+++ b/_posts/2016-02-25-day-37.md
@@ -11,6 +11,12 @@ title:  Day 37
 	
 	> "This is an unpleasant surprise. MCMC has replied to my query and said they will issue a statement," &mdash; Editor &amp; Chief Executive, Jahabar Sadiq
 	
+	- The Executive Director for Lawyers for Liberty Malaysia (a human rights lawyers’ organisation), Eric Paulsen, tweeted the following:
+	
+	<center>
+		blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">No valid reasons for blocking <a href="https://twitter.com/tm_insider">@tm_insider</a> other than a desperate attempt to stem the flow of critical news and information.</p>&mdash; Eric Paulsen (@EricPaulsen101) <a href="https://twitter.com/EricPaulsen101/status/702806547345244160">February 25, 2016</a></blockquote>
+	</center>
+	
 - Updated list of online news sites that are blocked in Malaysia, besides Medium.com:-
 	
 	- www.themalaysianinsider.com
