--- a/_posts/2016-02-25-day-37.md
+++ b/_posts/2016-02-25-day-37.md
@@ -6,8 +6,8 @@ title:  Day 37
 - A local online news portal, <a href="http://www.themalaysianinsider.com/" target="_blank">The Malaysian Insider</a> has been blocked by the Malaysian Government, Malaysian Communications and Multimedia Commission (MCMC) &mdash; blocked due to "national security" reasons
 
 	- The news portal turned 8 on this very day (25th February UTC/GMT +0800)
-	- Featured on <a href="https://www.malaysiakini.com/news/331711" target="_blank">Gov't blocks The Malaysian Insider</a>
-	- Featured on <a href="http://www.themalaysianinsider.com/malaysia/article/tmi-turns-8-cut-off-from-selected-net-providers" target="">TMI banned on grounds of ‘national security’</a>
+	- Featured on MalaysiaKini <a href="https://www.malaysiakini.com/news/331711" target="_blank">Gov't blocks The Malaysian Insider</a>
+	- Featured on The Malaysian Insider <a href="http://www.themalaysianinsider.com/malaysia/article/tmi-turns-8-cut-off-from-selected-net-providers" target="">TMI banned on grounds of ‘national security’</a>
 	
 	> "This is an unpleasant surprise. MCMC has replied to my query and said they will issue a statement," &mdash; Editor &amp; Chief Executive, Jahabar Sadiq
 	
